k8s/base/resources.yaml
# base/resources.yaml

# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: nps

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: nps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---
# PostgreSQL Service
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: nps
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

---
# NPS Application Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nps
  namespace: nps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nps
  template:
    metadata:
      labels:
        app: nps
    spec:
      containers:
        - name: nps
          image: nps:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: application-config
              mountPath: /config
      volumes:
        - name: application-config
          configMap:
            name: nps

---
# NPS Application Service
apiVersion: v1
kind: Service
metadata:
  name: nps-service
  namespace: nps
spec:
  type: ClusterIP
  selector:
    app: nps
  ports:
    - port: 80
      targetPort: 8080

---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nps-ingress
  namespace: nps
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "JSESSIONID"
    nginx.ingress.kubernetes.io/session-cookie-path: "/"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-cookie-path: "/ /"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: nps.lvh.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nps-service
                port:
                  number: 80
